@@ -51,7 +51,8 @@ READABLE(kpathsea kpse, const_string fn, unsigned int st)
   Windows, if it really exists and input name is given in
   full-absolute path in a command line.
   /../, /./, \..\, \.\ should be excluded (2020/06/06)
-  More than one directory separators should be excluded. (2020/10/24)
+  More than one adjacent directory separators should be
+  excluded. (2020/10/24)
 */
   p = strstr(fn, ".\\");
   if (!p) {
